test/descriptor/seman/poly_corr12.v3
//@seman = DescriptorError @ 4:25
class DA<T> describes A<T> { }
class A<T> descriptor DA<T> { }
class B<T> extends A<T> { }  // error: B must declare a descriptor since A has one
